/**
 * MIT License
 * Copyright (c) 2020 Fonoster Inc
 *
 * The Domains proto contains the artificats for domains administration
 */
syntax = "proto3";

package yaps.domains.v1alpha1;

service Domains {
  // Creates a new Domain resource.
  rpc CreateDomain (CreateDomainRequest) returns (Domain) {};
}

message CreateDomainRequest {
  Domain domain = 1;
}

message Domain {
  string ref = 1;
  string name = 2;
  string domain_uri = 3;
  string egress_rule = 4;
  string egress_number_ref = 5;
  repeated string access_deny = 6;
  repeated string access_allow = 7;
  string create_time = 8;
  string update_time = 9;
}
